test: adds event validation function generator

--- a/package.json
+++ b/package.json
@@ -545,6 +545,7 @@
     "@types/he": "^1",
     "@types/humanize-duration": "^3.27.4",
     "@types/jest": "^29.5.12",
+    "@types/js-yaml": "^4",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/luxon": "^3.4.2",
     "@types/madge": "^5.0.3",
@@ -647,6 +648,7 @@
     "jest-environment-jsdom": "patch:jest-environment-jsdom@npm%3A29.7.0#~/.yarn/patches/jest-environment-jsdom-npm-29.7.0-0b72dd0e0b.patch",
     "jest-fixed-jsdom": "^0.0.9",
     "jest-preview": "^0.3.1",
+    "js-yaml": "^4.1.1",
     "jsdom": "^16.7.0",
     "json-schema-to-ts": "^3.0.1",
     "jsonwebtoken": "^9.0.2",
