ci: move reusable workflows to reusable actions

--- a/.github/workflows/flaky-test-report.yml
+++ b/.github/workflows/flaky-test-report.yml
@@ -4,6 +4,7 @@ on:
   schedule:
     # Once every day from Monday-Friday at 08:00 UTC
     - cron: 0 8 * * 1-5
+  workflow_dispatch:
 
 permissions:
   contents: read
@@ -11,10 +12,12 @@ permissions:
 
 jobs:
   flaky-test-report:
-    uses: MetaMask/github-tools/.github/workflows/flaky-test-report.yml@main
-    with:
-      repository: ${{ github.event.repository.name }}
-      workflow_id: main.yml
-    secrets:
-      github-token: ${{ secrets.GITHUB_TOKEN }}
-      slack-webhook-flaky-tests: ${{ secrets.SLACK_WEBHOOK_FLAKY_TESTS }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Generate flaky test report
+        uses: MetaMask/github-tools/.github/actions/flaky-test-report@v1
+        with:
+          repository: ${{ github.event.repository.name }}
+          workflow-id: main.yml
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          slack-webhook-flaky-tests: ${{ secrets.SLACK_WEBHOOK_FLAKY_TESTS }}
