--- a/.github/workflows/check-pr-max-lines.yml
+++ b/.github/workflows/check-pr-max-lines.yml
@@ -17,7 +17,10 @@ permissions:
 
 jobs:
   check-pr-max-lines:
-    uses: metamask/github-tools/.github/workflows/pr-line-check.yml@main
-    with:
-      max_lines: 1000
-      ignore_patterns: '(\.lock|\.snap|lavamoat\/.*policy\.json)$'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check PR lines changed
+        uses: MetaMask/github-tools/.github/actions/pr-line-check@v1
+        with:
+          max-lines: '1000'
+          ignore-patterns: '(\.lock|\.snap|lavamoat\/.*policy\.json)$'
