feat: build policy ci

--- a/.github/workflows/update-lavamoat-policies.yml
+++ b/.github/workflows/update-lavamoat-policies.yml
@@ -236,6 +236,43 @@ jobs:
           path: lavamoat/webpack/mv3
           key: cache-webpack-${{ needs.prepare.outputs.COMMIT_SHA }}
 
+  update-lavamoat-webpack-policy-build:
+    name: Update LavaMoat webpack build policy
+    runs-on: ubuntu-latest
+    timeout-minutes: 30
+    needs:
+      - prepare
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Checkout pull request
+        run: gh pr checkout "${PR_NUMBER}"
+        env:
+          GITHUB_TOKEN: ${{ secrets.LAVAMOAT_UPDATE_TOKEN }}
+          PR_NUMBER: ${{ github.event.issue.number }}
+
+      - name: Checkout and setup environment
+        uses: MetaMask/action-checkout-and-setup@v1
+        with:
+          is-high-risk-environment: false
+          skip-allow-scripts: true
+          use-yarn-hydrate: true
+
+      - name: Update LavaMoat webpack build policy
+        run: yarn webpack:lavamoat --writeAutoPolicy
+        env:
+          INFURA_PROD_PROJECT_ID: 00000000000
+          SEGMENT_PROD_WRITE_KEY: 00000000000
+          GOOGLE_PROD_CLIENT_ID: 00000000000
+          APPLE_PROD_CLIENT_ID: 00000000000
+
+      - name: Cache webpack policy
+        uses: actions/cache/save@v4
+        with:
+          path: lavamoat/webpack/build
+          key: cache-webpack-build-${{ needs.prepare.outputs.COMMIT_SHA }}
+
   commit-updated-policies:
     name: Commit the updated LavaMoat policies
     runs-on: ubuntu-latest
@@ -247,6 +284,7 @@ jobs:
       - update-lavamoat-webapp-policy
       - update-lavamoat-webpack-policy-mv2
       - update-lavamoat-webpack-policy
+      - update-lavamoat-webpack-policy-build
     # Ensure forks don't get access to the LavaMoat update token
     if: ${{ needs.is-fork-pull-request.outputs.IS_FORK == 'false' }}
     steps:
@@ -316,6 +354,13 @@ jobs:
         with:
           path: lavamoat/webpack/mv3
           key: cache-webpack-${{ needs.prepare.outputs.COMMIT_SHA }}
+          fail-on-cache-miss: true
+
+      - name: Restore webpack build policy
+        uses: actions/cache/restore@v4
+        with:
+          path: lavamoat/webpack/build
+          key: cache-webpack-build-${{ needs.prepare.outputs.COMMIT_SHA }}
           fail-on-cache-miss: true
 
       - name: Check whether there are policy changes
