chore: patch in the lavamoat fix in progress

--- a/package.json
+++ b/package.json
@@ -653,7 +653,7 @@
     "json-schema-to-ts": "^3.0.1",
     "jsonwebtoken": "^9.0.2",
     "koa": "^2.7.0",
-    "lavamoat": "^10.0.0",
+    "lavamoat": "patch:lavamoat@npm%3A10.0.0#~/.yarn/patches/lavamoat-npm-10.0.0-9a132772a6.patch",
     "lavamoat-viz": "^7.0.5",
     "level": "^8.0.1",
     "lockfile-lint": "^4.10.6",
