updated flag for experimental

--- a/builds.yml
+++ b/builds.yml
@@ -98,7 +98,7 @@ buildTypes:
       - INFURA_ENV_KEY_REF: INFURA_EXPERIMENTAL_PROJECT_ID
       - SEGMENT_WRITE_KEY_REF: SEGMENT_EXPERIMENTAL_WRITE_KEY
       - ALLOW_LOCAL_SNAPS: false
-      - IS_SIDEPANEL: false
+      - IS_SIDEPANEL: true
       - REQUIRE_SNAPS_ALLOWLIST: true
       - REJECT_INVALID_SNAPS_PLATFORM_VERSION: true
       - IFRAME_EXECUTION_ENVIRONMENT_URL: https://execution.metamask.io/iframe/10.2.3/index.html
