--- a/.github/workflows/e2e-chrome.yml
+++ b/.github/workflows/e2e-chrome.yml
@@ -91,11 +91,17 @@ jobs:
     # This if statement is equivalent to IS_FORK
     if: ${{ !(github.event.pull_request.head.repo.fork || github.event.repository.fork) }}
     uses: ./.github/workflows/run-e2e.yml
+    strategy:
+      fail-fast: false
+      matrix:
+        index: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
     with:
       test-suite-name: test-e2e-chrome-dist
       build-artifact: build-dist-browserify
       test-command: yarn test:e2e:chrome:dist
       builds-from-run: ${{ inputs.builds-from-run }}
+      matrix-index: ${{ matrix.index }}
+      matrix-total: ${{ strategy.job-total }}
 
   test-e2e-chrome-api-specs:
     uses: ./.github/workflows/run-e2e.yml
