--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -31,6 +31,12 @@ npmAuditIgnoreAdvisories:
   # URL: https://github.com/advisories/GHSA-5j98-mcp5-4vw2
   - 1109809
 
+  # Issue: `body-parser` denial of service vulnerability
+  # Seemingly only impacts v2.2.0, but we're on v1. The advisory range is overly wide.
+  # The attack vector also does not apply to how we use the package.
+  # URL: https://github.com/advisories/GHSA-wqch-xfxh-vrr4
+  - 1110857
+
   ### Package Deprecations:
 
   # React-tippy brings in popper.js and react-tippy has not been updated in
