fix: lazy loading build

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "webpack": "tsx ./development/webpack/launch.ts",
     "webpack:clearcache": "./development/clear-webpack-cache.js",
-    "webpack:tsc": "tsc ./development/webpack/launch.ts --esModuleInterop --noEmitOnError true --skipLibCheck --downlevelIteration --outDir ./development/.webpack",
+    "webpack:tsc": "tsc ./development/webpack/launch.ts ./development/webpack/build.ts --esModuleInterop --noEmitOnError true --skipLibCheck --downlevelIteration --outDir ./development/.webpack",
     "webpack:lavamoat": "yarn webpack:tsc && lavamoat ./development/.webpack/launch.js --policy lavamoat/webpack/build/policy.json --override lavamoat/webpack/build/policy-override.json",
     "foundryup": "yarn mm-foundryup",
     "postinstall": "yarn webpack:clearcache && yarn foundryup",
