--- a/package.json
+++ b/package.json
@@ -271,7 +271,7 @@
     "@metamask/address-book-controller": "^7.0.0",
     "@metamask/announcement-controller": "^8.0.0",
     "@metamask/approval-controller": "^8.0.0",
-    "@metamask/assets-controllers": "patch:@metamask/assets-controllers@npm%3A88.0.0#~/.yarn/patches/@metamask-assets-controllers-npm-88.0.0-3dfc0ab8f1.patch",
+    "@metamask/assets-controllers": "patch:@metamask/assets-controllers@patch%3A@metamask/assets-controllers@npm%253A88.0.0%23~/.yarn/patches/@metamask-assets-controllers-npm-88.0.0-3dfc0ab8f1.patch%3A%3Aversion=88.0.0&hash=ab5ccb#~/.yarn/patches/@metamask-assets-controllers-patch-55af8eec14.patch",
     "@metamask/base-controller": "^9.0.0",
     "@metamask/bitcoin-wallet-snap": "^1.6.0",
     "@metamask/bridge-controller": "^60.1.0",
