--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -78,3 +78,5 @@ npmPreapprovedPackages:
   - 'lavamoat-browserify'
   - 'lavamoat-tofu'
   - 'lavamoat-node'
+  # Required to install the patched package to unblock audit. Delete this after three days have passed from the package release date.
+  - 'node-forge'
