--- a/.github/workflows/cla.yml
+++ b/.github/workflows/cla.yml
@@ -27,6 +27,6 @@ jobs:
           url-to-cladocument: 'https://metamask.io/cla'
           # This branch can't have protections, commits are made directly to the specified branch.
           branch: 'cla-signatures'
-          allowlist: 'dependabot[bot],metamaskbot,crowdin-bot,runway-github[bot]'
+          allowlist: 'dependabot[bot],metamaskbot,crowdin-bot,runway-github[bot],cursor'
           allow-organization-members: true
           blockchain-storage-flag: false
