--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -46,6 +46,7 @@ npmAuditIgnoreAdvisories:
   # Material UI dependencies are planned for removal
   - '@material-ui/core (deprecation)'
   - '@material-ui/styles (deprecation)'
+  - '@material-ui/pickers (deprecation)'
 
   # Dependencies brought in by @truffle/decoder that are deprecated:
   - 'cids (deprecation)' # via @ensdomains/content-hash
