fix: add explicit github-tools-version pinning to update-release-changelog
Pin github-tools-version to v1.1.0 to prevent defaulting to 'main' branch
which could cause unpredictable behavior if main diverges.

--- a/.github/workflows/update-release-changelog.yml
+++ b/.github/workflows/update-release-changelog.yml
@@ -54,4 +54,5 @@ jobs:
           repository-url: ${{ github.server_url }}/${{ github.repository }}
           platform: extension
           previous-version-ref: 'null'
+          github-tools-version: v1.1.0
           github-token: ${{ secrets.PR_TOKEN }}
