fix: html bundler webpack plugin

--- a/package.json
+++ b/package.json
@@ -640,7 +640,7 @@
     "gulp-stylelint": "^13.0.0",
     "gulp-watch": "^5.0.1",
     "gulp-zip": "^5.1.0",
-    "html-bundler-webpack-plugin": "^4.21.1",
+    "html-bundler-webpack-plugin": "patch:html-bundler-webpack-plugin@npm%3A4.21.1#~/.yarn/patches/html-bundler-webpack-plugin-npm-4.21.1-c5b80fbfd7.patch",
     "http-server": "^14.1.1",
     "https-browserify": "^1.0.0",
     "husky": "^8.0.3",
