--- a/.github/workflows/update-lavamoat-policies.yml
+++ b/.github/workflows/update-lavamoat-policies.yml
@@ -260,7 +260,7 @@ jobs:
           use-yarn-hydrate: true
 
       - name: Update LavaMoat webpack build policy
-        run: yarn webpack:lavamoat --writeAutoPolicy
+        run: yarn webpack:lavamoat:generate
         env:
           INFURA_PROD_PROJECT_ID: 00000000000
           SEGMENT_PROD_WRITE_KEY: 00000000000
