--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "webpack:clearcache": "./development/clear-webpack-cache.js",
     "webpack:tsc": "tsc -p ./development/webpack/tsconfig.json && node -e \"require('fs').writeFileSync('development/.webpack/launch.js', require('fs').readFileSync('development/.webpack/launch.js', 'utf8').replace('fork.ts', 'fork.js'));\"",
     "webpack:lavamoat": "yarn webpack:tsc && lavamoat --policy lavamoat/webpack/build/policy.json --override lavamoat/webpack/build/policy-override.json ./development/.webpack/launch.js",
-    "webpack:lavamoat:build": "yarn webpack:lavamoat -- --no-cache",
-    "webpack:lavamoat:generate": "yarn webpack:lavamoat --writeAutoPolicy",
+    "webpack:lavamoat:build": "yarn webpack:lavamoat -- --env production --no-cache",
+    "webpack:lavamoat:generate": "yarn webpack:lavamoat --writeAutoPolicy -- --env production --no-cache",
     "foundryup": "yarn mm-foundryup",
     "postinstall": "yarn webpack:clearcache && yarn foundryup",
     "env:e2e": "SEGMENT_HOST='https://api.segment.io' SEGMENT_WRITE_KEY='FAKE' yarn",
