--- a/.github/workflows/update-lavamoat-policies.yml
+++ b/.github/workflows/update-lavamoat-policies.yml
@@ -186,7 +186,7 @@ jobs:
           use-yarn-hydrate: true
 
       - name: Update LavaMoat webpack MV2 policy
-        run: yarn webpack --env production --no-cache --generatePolicy -v 2
+        run: yarn webpack:lavamoat:build --generatePolicy -v 2
         env:
           INFURA_PROD_PROJECT_ID: 00000000000
           SEGMENT_PROD_WRITE_KEY: 00000000000
@@ -223,7 +223,7 @@ jobs:
           use-yarn-hydrate: true
 
       - name: Update LavaMoat webpack policy
-        run: yarn webpack --env production --no-cache --generatePolicy
+        run: yarn webpack:lavamoat:build --generatePolicy
         env:
           INFURA_PROD_PROJECT_ID: 00000000000
           SEGMENT_PROD_WRITE_KEY: 00000000000
