--- a/package.json
+++ b/package.json
@@ -410,6 +410,7 @@
     "ethereumjs-util": "^7.0.10",
     "extension-port-stream": "^5.0.0",
     "fast-json-patch": "^3.1.1",
+    "fast-json-stable-stringify": "^2.1.0",
     "fuse.js": "^3.2.0",
     "he": "^1.2.0",
     "history": "^5.3.0",
