--- a/package.json
+++ b/package.json
@@ -659,7 +659,7 @@
     "json-schema-to-ts": "^3.0.1",
     "jsonwebtoken": "^9.0.2",
     "koa": "^3.1.1",
-    "lavamoat": "git+https://github.com/LavaMoat/LavaMoat.git#head=main&workspace=lavamoat",
+    "lavamoat": "10.0.3",
     "lavamoat-viz": "^7.0.5",
     "level": "^8.0.1",
     "lockfile-lint": "^4.10.6",
