--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -175,6 +175,10 @@ test/e2e/mock-e2e-allowlist.js                    @MetaMask/qa
 test/e2e/mock-e2e.js                              @MetaMask/qa
 test/e2e/tests/settings/state-logs-helpers.ts     @MetaMask/qa
 test/e2e/tests/settings/state-logs.json           @MetaMask/qa @MetaMask/extension-privacy-reviewers
+test/e2e/fixtures/onboarding-fixture.json         @MetaMask/qa @MetaMask/extension-platform
+test/e2e/fixtures/fixture-validation.ts           @MetaMask/qa @MetaMask/extension-platform
+test/e2e/dist/wallet-fixture-export.spec.ts       @MetaMask/qa @MetaMask/extension-platform
+test/e2e/dist/wallet-fixture-validation.spec.ts   @MetaMask/qa @MetaMask/extension-platform
 
 # Wallet Integrations
 app/scripts/lib/rpc-method-middleware                                 @MetaMask/wallet-integrations
