--- a/builds.yml
+++ b/builds.yml
@@ -303,6 +303,7 @@ env:
   - QUICKNODE_BASE_URL: null
   - QUICKNODE_BSC_URL: null
   - QUICKNODE_SEI_URL: null
+  - QUICKNODE_MONAD_URL: null
 
   ###
   # API keys to 3rd party services
